@@ -3,13 +3,13 @@
 # Target URL.
 # Example: http://192.168.1.121/sqlmap/mysql/get_int.php?id=1&cat=2
 # PHP and MySQL (local)
-url = http://127.0.0.1/sqlmap/mysql/get_int.php?id=1
+#url = http://127.0.0.1/sqlmap/mysql/get_int.php?id=1
 # PHP and Oracle (local)
 #url = http://127.0.0.1/sqlmap/oracle/get_int.php?id=1
 # PHP and PostgreSQL (local)
 #url = http://127.0.0.1/sqlmap/pgsql/get_int.php?id=1
 # PHP and Microsoft SQL Server (remote)
-#url = http://127.0.0.1/sqlmap/mssql/get_int.php?id=1
+url = http://127.0.0.1/sqlmap/mssql/get_int.php?id=1
 # PHP and MySQL (remote on Windows)
 #url = http://127.0.0.1/sqlmap/mysql/win_get_int.php?id=1
 # ASP and Microsoft SQL Server (local)
