@@ -73,12 +73,20 @@
         <info type="Linux" distrib="Knoppix"/>
     </regexp>
 
-    <regexp value="(Mandrake|Mandriva)">
+    <regexp value="Mandrake">
         <info type="Linux" distrib="Mandrake"/>
+    </regexp>
+
+    <regexp value="Mandriva">
+        <info type="Linux" distrib="Mandriva"/>
     </regexp>
 
     <regexp value="Red[\-\_\ ]*Hat">
         <info type="Linux" distrib="Red Hat"/>
+    </regexp>
+
+    <regexp value="Slackware">
+        <info type="Linux" distrib="Slackware"/>
     </regexp>
 
     <regexp value="SuSE">
@@ -101,6 +109,12 @@
 
     <regexp value="OpenBSD">
         <info type="OpenBSD"/>
+    </regexp>
+
+    <!-- Mac OSX -->
+
+    <regexp value="Mac[\-\_\ ]*OSX">
+        <info type="Mac OSX"/>
     </regexp>
 
     <regexp value="Darwin">
