@@ -18,13 +18,14 @@ sqlmap (0.6.3-1) stable; urgency=low
   * Minor improvement to set by default in all HTTP requests the standard
     HTTP headers (Accept, Accept-Encoding, etc);
   * Minor improvements to sqlmap Debian package files: sqlmap uploaded
-    to official Debian project repository;
+    to official Debian project repository, on queue at the moment;
   * Major bug fix to correctly handle httplib.BadStatusLine exception;
   * Minor bug fix to handle session.error and session.timeout in HTTP
     requests;
   * Minor bug fix so that when the user provide a SELECT statement to be
     processed with an asterisk as columns, now it also work if in the FROM
     there is no database name specified;
+  * Minor bug fix to correctly enumerate columns on Microsoft SQL Server;
   * Minor bug fix to correctly dump table entries when the column is
     provided;
 
